Launcher3: Update default workspace
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -12,6 +12,11 @@
      limitations under the License.
 -->
 <resources>
+
     <!-- Application name -->
     <string name="colt_app_name" translatable="false">ColtOS Launcher</string>
+
+    <!-- Folder titles -->
+    <string name="google_folder_title" translatable="false">Google</string>
+
 </resources>
