--- a/res/values/colt_dimens.xml
+++ b/res/values/colt_dimens.xml
@@ -18,5 +18,8 @@
 
     <!-- QuickSpace -->
     <dimen name="quickspace_title_size">24dp</dimen>
-    <dimen name="quickspace_alternate_title_size">21dp</dimen>
+    <dimen name="quickspace_alternate_title_size">22dp</dimen>
+
+    <!-- Overview scrolling scale animation -->
+    <dimen name="overview_scroll_scale">0.9</dimen>
 </resources>
