Launcher3: Add support for parallel space
spkal01: Forward Port to 13
Change-Id: I13bee37cae645f50512f4d80cdfa25f84dce1b6b
Signed-off-by: LibXZR <i@xzr.moe>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>
Signed-off-by: AnierinB <anierin@evolution-x.org>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -103,6 +103,16 @@
         android:title="@string/category_misc">
 
         <Preference
+            android:key="parallel_space"
+            android:title="@string/laboratory_parallel_space_title"
+            android:summary="@string/laboratory_parallel_space_summary"
+            android:order="-994">
+            <intent
+                android:targetPackage="ink.kscope.parallelspace"
+                android:targetClass="ink.kscope.parallelspace.MainActivity" />
+        </Preference>
+
+        <Preference
             android:key="pref_developer_options"
             android:persistent="false"
             android:title="Developer Options"
