--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -57,4 +57,8 @@
     <string name="category_icon">Icons</string>
     <string name="category_misc">Misc</string>
 
+    <!-- Parallel space -->
+    <string name="laboratory_parallel_space_title">Parallel space</string>
+    <string name="laboratory_parallel_space_summary">Allow running multiple instances of the same application in parallel</string>
+
 </resources>
