--- a/res/layout/quickspace_alternate_double.xml
+++ b/res/layout/quickspace_alternate_double.xml
@@ -27,7 +27,7 @@
         android:layout_gravity="start|center_vertical"
         android:gravity="start|center_vertical"
         android:paddingStart="16dp"
-        android:paddingTop="9dp">
+        android:paddingTop="7dp">
 
             <com.android.launcher3.quickspace.views.DoubleShadowTextView
                 android:id="@+id/extended_greetings"
@@ -38,7 +38,7 @@
                 android:textColor="?workspaceAccentColor"
                 android:textSize="18dp"
             	android:visibility="gone"
-                android:letterSpacing="0.02"
+                android:letterSpacing="0.014"
                 launcher:ambientShadowBlur="3dp"
                 launcher:ambientShadowColor="?workspaceAmbientShadowColor"
                 launcher:keyShadowBlur="2dp"
@@ -54,7 +54,7 @@
         android:layout_gravity="start|center_vertical"
         android:gravity="start|center_vertical"
         android:paddingStart="16dp"
-        android:paddingTop="9dp">
+        android:paddingTop="6dp">
         
             <com.android.launcher3.quickspace.views.DoubleShadowTextView
                 android:id="@+id/extended_greetings_clock"
@@ -66,7 +66,7 @@
                 android:textSize="18dp"
             	android:paddingEnd="6dp"
             	android:visibility="gone"
-                android:letterSpacing="0.02"
+                android:letterSpacing="0.014"
                 launcher:ambientShadowBlur="3dp"
                 launcher:ambientShadowColor="?workspaceAmbientShadowColor"
                 launcher:keyShadowBlur="2dp"
@@ -85,7 +85,7 @@
         android:focusableInTouchMode="true"
         android:textColor="?workspaceTextColor"
         android:textSize="@dimen/quickspace_title_size"
-        android:letterSpacing="0.02"
+        android:letterSpacing="0.014"
         launcher:ambientShadowBlur="3dp"
         launcher:ambientShadowColor="?workspaceAmbientShadowColor"
         launcher:keyShadowBlur="2dp"
@@ -105,12 +105,12 @@
             android:gravity="start|center_vertical"
             android:orientation="horizontal"
             android:paddingStart="16dp"
-            android:paddingTop="9dp">
+            android:paddingTop="7dp">
 
             <ImageView
                 android:id="@+id/quick_event_weather_icon"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:layout_width="17dp"
+                android:layout_height="17dp"
                 android:layout_gravity="start|center_vertical"
                 android:scaleType="fitXY" />
 
@@ -123,8 +123,8 @@
                 android:drawablePadding="8dp"
                 android:paddingStart="6dp"
                 android:textColor="?workspaceTextColor"
-                android:textSize="16dp"
-                android:letterSpacing="0.02"
+                android:textSize="15dp"
+                android:letterSpacing="0.014"
                 launcher:ambientShadowBlur="3dp"
                 launcher:ambientShadowColor="?workspaceAmbientShadowColor"
                 launcher:keyShadowBlur="2dp"
@@ -140,12 +140,12 @@
         android:layout_marginEnd="16dp"
         android:orientation="horizontal"
         android:paddingStart="16dp"
-        android:paddingTop="9dp">
+        android:paddingTop="7dp">
 
         <ImageView
             android:id="@+id/quick_event_icon_sub"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
             android:layout_gravity="start|center_vertical"
             android:scaleType="fitXY"
             android:layout_weight="0.0" />
@@ -165,8 +165,8 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:textColor="?workspaceAccentColor"
-            android:textSize="16dp"
-            android:letterSpacing="0.02"
+            android:textSize="15dp"
+            android:letterSpacing="0.015"
             launcher:ambientShadowBlur="3dp"
             launcher:ambientShadowColor="?workspaceAmbientShadowColor"
             launcher:keyShadowBlur="2dp"
@@ -188,7 +188,8 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:textColor="?workspaceTextColor"
-            android:textSize="16dp"
+            android:textSize="15dp"
+            android:alpha="0.90"
             android:letterSpacing="0.02"
             launcher:ambientShadowBlur="3dp"
             launcher:ambientShadowColor="?workspaceAmbientShadowColor"
