Launcher3: Recents: Add preference to enable scroll vibration
Signed-off-by: StarkDroid <gamerprince.exp@gmail.com>

--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -305,4 +305,6 @@
 
     <!-- Shake Clear Recents -->
     <string name="recents_shake_clear_all_title">Shake phone to clear all tasks</string>
+   <!-- Recents Scroll Vibration -->
+    <string name="pref_recents_vibration_title">Enable haptic feedback on recents scroll</string>
 </resources>
