Launcher3: Add kill App button to recents overview
Signed-off-by: Trishiraj <gamerprince.exp@gmail.com>

--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -307,4 +307,6 @@
     <string name="recents_shake_clear_all_title">Shake phone to clear all tasks</string>
    <!-- Recents Scroll Vibration -->
     <string name="pref_recents_vibration_title">Enable haptic feedback on recents scroll</string>
+    
+    <string name="recents_kill_app">Kill app</string>
 </resources>
