Revert "ArrowLauncher: Use adaptive ArrowOS icon"
This reverts commit 78be9f28f5a9d84959ccb4a285a03dad388776d1.

Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/res/values/arrow_strings.xml
+++ b/res/values/arrow_strings.xml
@@ -20,7 +20,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Application name -->
-    <string name="arrow_app_name" translatable="false">Arrow Launcher</string>
+    <string name="arrow_app_name" translatable="false">ColtOS Launcher</string>
 
     <!-- Folder titles -->
     <string name="google_folder_title" translatable="false">Google</string>
