--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -142,7 +142,7 @@
     <string name="show_quickspace_title">At A Glance</string>
     <string name="show_quickspace_summary">Show at the top of your home screen</string>
     <string name="quickspace_date_format" translatable="false">EEE, MMM d</string>
-    <string name="quickspace_date_format_minimalistic" translatable="false">EEEE, MMMM d</string>
+    <string name="quickspace_date_format_minimalistic" translatable="false">EEE, MMMM d</string>
 
     <!-- QuickSpace: QuickEvent: Device Intro Event -->
     <string name="quick_event_rom_intro_welcome" translatable="false">Welcome to ColtOS!</string>
@@ -152,8 +152,9 @@
         <item>Thank you for flashing ColtOS!</item>
         <item>We\'re not the best, but at least we try!</item>
         <item>Tap here to begin</item>
-        <item>Say hi to us on Telegram</item>
         <item>We love it when you enjoy ColtOS!</item>
+        <item>Do something nice today</item>
+        <item>Sanity for your Paranoia</item>
     </string-array>
 
     <!-- QuickSpace: QuickEvent: Greetings -->
