--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -20,7 +20,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Application name -->
-    <string name="arrow_app_name" translatable="false">Arrow Launcher</string>
+    <string name="colt_app_name" translatable="false">ColtOS Launcher</string>
 
     <!-- Settings title to show Google Now at -1 screen on launcher. [CHAR LIMIT=50] -->
     <string name="title_show_google_feed">Show Google feed</string>
